kustomize/front/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lestvica-transparentnosti-front
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - lestvica-transparentnosti.djnd.si
        - lestvica-transparentnosti.danesjenovdan.si
      secretName: lestvica-transparentnosti-front-tls
  rules:
    - host: lestvica-transparentnosti.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lestvica-transparentnosti-front
                port:
                  number: 80
    - host: lestvica-transparentnosti.danesjenovdan.si
      http: *http_paths
